syntax = "proto3";

package NUgc.NSchema;

import "google/protobuf/any.proto";
import "google/protobuf/field_mask.proto";

// Generic API request.
// Might come from HTTP, AppHost or batch.
message TApiRequest {
    string Method = 1;                  // like HTTP method: GET, PUT, POST, PATCH, DELETE
    string Path = 2;                    // like HTTP path including version prefix
    map<string, string> Params = 3;     // like CGI query parameters
    map<string, string> Headers = 4;    // like HTTP headers
    google.protobuf.Any Body = 5;       // request data
    google.protobuf.Any IfEqualTo = 6;  // value for CAS
    bool IfNotExist = 7;                // apply modification requests only if entity not exists
}

// Generic API response
message TApiResponse {
    uint32 StatusCode = 1;              // like HTTP status code: 200, 400, 500
    string StatusMessage = 2;           // like HTTP status string
    map<string, string> Headers = 3;    // like HTTP headers
    google.protobuf.Any Body = 4;       // response data
    string RequestPath = 5;             // HTTP path from corresponding request including version prefix
}

// Batch API request
message TApiBatchRequest {
    repeated TApiRequest Requests = 1;
}

// Batch API response
message TApiBatchResponse {
    repeated TApiResponse Responses = 1;
}

// Patch API request
message TApiPatchRequest {
    google.protobuf.Any Value = 1;
    google.protobuf.FieldMask Fields = 2;
}
